--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -4,27 +4,61 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    
+    <!-- Tubería principal -->
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:fillColor="#1976D2"
+        android:pathData="M30,40 L78,40 L78,68 L30,68 Z" />
+    
+    <!-- Tubería vertical -->
+    <path
+        android:fillColor="#1976D2"
+        android:pathData="M48,20 L60,20 L60,40 L48,40 Z" />
+    
+    <!-- Abertura del drenaje -->
+    <path
+        android:fillColor="#1565C0"
+        android:pathData="M44,68 L64,68 L64,72 L44,72 Z" />
+    
+    <!-- Herramienta de desazolve (serpiente) -->
+    <path
+        android:fillColor="#FF6B35"
+        android:pathData="M52,44 Q54,42 56,44 Q58,46 56,48 Q54,50 52,48 Q50,46 52,44 Z" />
+    
+    <path
+        android:fillColor="#FF6B35"
+        android:pathData="M56,48 Q58,50 60,48 Q62,46 60,44 Q58,42 56,44 Z" />
+    
+    <path
+        android:fillColor="#FF6B35"
+        android:pathData="M60,44 Q62,46 64,44 Q66,42 64,40 Q62,38 60,40 Z" />
+    
+    <!-- Cabeza de la herramienta -->
+    <path
+        android:fillColor="#E65100"
+        android:pathData="M64,40 L68,40 L68,44 L64,44 Z" />
+    
+    <!-- Gotas de agua (indicando limpieza) -->
+    <path
+        android:fillColor="#42A5F5"
+        android:pathData="M36,36 Q38,34 40,36 Q42,38 40,40 Q38,42 36,40 Q34,38 36,36 Z" />
+    
+    <path
+        android:fillColor="#42A5F5"
+        android:pathData="M72,36 Q74,34 76,36 Q78,38 76,40 Q74,42 72,40 Q70,38 72,36 Z" />
+    
+    <!-- Detalles de la tubería -->
+    <path
+        android:fillColor="#1565C0"
+        android:pathData="M30,44 L78,44 L78,46 L30,46 Z" />
+    
+    <path
+        android:fillColor="#1565C0"
+        android:pathData="M30,62 L78,62 L78,64 L30,64 Z" />
+    
+    <!-- Sombra sutil -->
+    <path
+        android:fillColor="#000000"
+        android:fillAlpha="0.1"
+        android:pathData="M30,68 L78,68 L78,72 L30,72 Z" />
 </vector>
